[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.package-data]
VISA = ["*.ui"]

[tool.setuptools.package-dir]
"naqs_devices" = "./src/naqs_devices"

[tool.setuptools.dynamic]
version = {attr = "naqs_devices.VISA.__version__"}

[project]
name = "naqs_devices_VISA"
description = "Parent class for VISA controlled devices"
authors = [{name = "naqslab", email = "naqslab@gmail.com"}]
dynamic = ["version"]
license = {file = 'LICENSE.txt'}
dependencies = [
    "naqs_devices @ git+https://github.com/naqslab/naqs_devices.git",
    "blacs>=3.0.0",
    "labscript_devices>=3.0.0",
    "labscript>=3.0.0",
    "labscript_utils>=3.0.0",
    "numpy>=1.15.1",
    "h5py",
]

[project.optional-dependencies]
docs = [
    "PyQt5",
    "Sphinx==7.3.7",
    "sphinx-rtd-theme==2.0.0",
    "myst_parser==4.0.1",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"